--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto"> 
+                    <!-- Dentro de los href, una vez estando en la página puedes ir a cualquier sección desde el navbar -->
                     <li class="nav-item active">
-                        <a class="nav-link text-light fw-bold" href="#">Inicio</a>
+                        <a class="nav-link text-light fw-bold" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light fw-bold" href="#">¿Quienes somos?</a>
+                        <a class="nav-link text-light fw-bold" href="#quienes-somos">¿Quienes somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light fw-bold" href="#">Destacados</a>
+                        <a class="nav-link text-light fw-bold" href="#destacados">Destacados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light fw-bold" href="#">Contacto</a>
+                        <a class="nav-link text-light fw-bold" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
